tests/ui/type/pattern_types/range_patterns_trait_impls2.stderr
error[E0277]: can't compare `(u32) is 1..=` with `(u32) is 1..=`
  --> $DIR/range_patterns_trait_impls2.rs:13:13
   |
LL | impl Eq for Y {}
   |             ^ no implementation for `(u32) is 1..= == (u32) is 1..=`
   |
   = help: the trait `PartialEq` is not implemented for `(u32) is 1..=`
note: required by a bound in `Eq`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
